--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -100,7 +100,7 @@
                         </Grid.ColumnDefinitions>
                         
                         <!-- Left resize grip -->
-                        <Border Grid.Column="0" x:Name="LeftResizeGrip" Background="Transparent" Cursor="SizeWE"
+                            <!-- Removed buttons from title bar, added to vertical toolbar -->
                                 MouseDown="ResizeGrip_MouseDown" MouseMove="ResizeGrip_MouseMove" MouseUp="ResizeGrip_MouseUp">
                             <Border Width="4" Height="50" Background="#444" CornerRadius="2" VerticalAlignment="Center"
                                     HorizontalAlignment="Right"/>
